sfdx/nibs-sfdx/main/default/objects/Contact/fields/fbUserId__c.field-meta.xml
<CustomField>
    <fullName>fbUserId__c</fullName>
    <label>Facebook Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>