sfdx/nibs-sfdx/main/default/objects/Contact/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>male</fullName>
                <default>true</default>
                <label>male</label>
            </value>
            <value>
                <fullName>female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>