sfdx/nibs-sfdx/main/default/objects/Contact/fields/Loyalty_Badge__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Badge__c</fullName>
    <formula>IF (AND(Loyalty_Points__c &gt;= 1000, Loyalty_Points__c &lt; 5000),
    IMAGE(&quot;/resource/eLoyalty/images/level1Badge.png&quot;, &quot;Forastero&quot;, 100, 100),

IF (AND(Loyalty_Points__c &gt;= 5000, Loyalty_Points__c  &lt; 10000),
    IMAGE(&quot;/resource/eLoyalty/images/level2Badge.png&quot;, &quot;Trinitario&quot;, 100, 100),

IF (Loyalty_Points__c &gt;= 10000,
    IMAGE(&quot;/resource/eLoyalty/images/level3Badge.png&quot;, &quot;Criollo&quot;, 100, 100),

IMAGE(&quot;/resource/eLoyalty/images/level0Badge.png&quot;, &quot;New Nibbler&quot;, 100, 100))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <type>Text</type>
</CustomField>