sfdx/nibs-sfdx/main/default/objects/Contact/fields/Loyalty_Points__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points__c</fullName>
    <description>Summary of all loyalty points for a user</description>
    <label>Loyalty Points</label>
    <summarizedField>Interaction__c.Points__c</summarizedField>
    <summaryForeignKey>Interaction__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>