sfdx/nibs-sfdx/main/default/objects/Contact/fields/LoyaltyId__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyId__c</fullName>
    <externalId>true</externalId>
    <label>Loyalty App Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>