sfdx/nibs-sfdx/main/default/objects/Contact/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <label>password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>