sfdx/nibs-sfdx/main/default/objects/Contact/fields/pic__c.field-meta.xml
<CustomField>
    <fullName>pic__c</fullName>
    <formula>image(pictureURL__c,&#39;picture&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Picture</label>
    <type>Text</type>
</CustomField>