sfdx/nibs-sfdx/main/default/objects/Contact/fields/pictureURL__c.field-meta.xml
<CustomField>
    <fullName>pictureURL__c</fullName>
    <label>Picture URL</label>
    <type>Url</type>
</CustomField>