sfdx/nibs-sfdx/main/default/objects/Contact/fields/Preference__c.field-meta.xml
<CustomField>
    <fullName>Preference__c</fullName>
    <label>Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coke</fullName>
            </value>
            <value>
                <fullName>Diet Coke</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>