sfdx/nibs-sfdx/main/default/objects/Contact/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>